hard-gists/1780878/run.log
=== Docker Run Log for 1780878 ===
Started at: Mi 29. Okt 12:28:59 CET 2025

[2025-10-29 12:29:00] START: Running container for 1780878
[2025-10-29 12:29:00] SUCCESS: Container 97ecf9ee335dc029e96b5ebb75cf0a16d5f6aef4c08c6483ecc73454d91baea9 started for 1780878
=== Container logs for 1780878 ===
  File "/snippet.py", line 29
    print "rc: ", rc
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1780878 ===
[2025-10-29 12:29:02] INFO: Container 97ecf9ee335dc029e96b5ebb75cf0a16d5f6aef4c08c6483ecc73454d91baea9 has stopped
